Closed Bug 640076 Opened 15 years ago Closed 15 years ago

TOK_XMLATTR tokens can span multiple lines

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Assigned: n.nethercote)

References

Details

(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)

Attachments

(2 files)

Attached file stack —
Reflect.parse("<\"\n\"") asserts js debug shell on TM changeset 80d8431f209e without -m nor -j at Assertion failure: IsTokenSane(tp), May be related to bug 640075. autoBisect shows this is probably related to the following changeset: The first bad revision is: changeset: 63253:3035bb782013 user: Nicholas Nethercote date: Tue Mar 08 16:10:51 2011 -0800 summary: Bug 638034 - Make scanning safer. r=brendan.
No time left today, I'll take a look tomorrow. Thanks for the report, Gary!
Assignee: general → nnethercote
Status: NEW → ASSIGNED
Attached patch patch — — Splinter Review
Easy fix -- I forgot to include XMLATTR in the list of tokens that can span multiple lines.
Attachment #517978 - Flags: review?(brendan)
Comment on attachment 517978 [details] [diff] [review] patch Oh sure -- easy to forget about multiline attributes on XML elements. /be
Attachment #517978 - Flags: review?(brendan) → review+
Summary: "Assertion failure: IsTokenSane(tp)," with Reflect.parse → TOK_XMLATTR tokens can span multiple lines
Whiteboard: fixed-in-tracemonkey
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: