Bug 640076 - TOK_XMLATTR tokens can span multiple lines.  r=brendan.